terraform/modules/prometheus/files/alertmanager-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: ${prometheus_namespace}
spec:
  ingressClassName: traefik
  rules:
  - host: ${alertmanager_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager-operated
            port:
              number: 9093
