terraform/modules/prometheus/files/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: ${prometheus_namespace}
spec:
  ingressClassName: traefik
  rules:
  - host: ${prometheus_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
